--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -67,7 +67,7 @@
 }
 
 .information .phone::before {
-    background-image: url('../img/icons/phone.svg');
+    background-image: url('../img/icons/faculdade.svg');
 }
 
 @media only screen and (min-width: 768px) {
